--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@ span.textshadowAzul{
         
 
                 <p class="methodology">
-					Note: YouGov Plc conducted the poll between June 5-7, 2023, under commissioned by Bankrate. The sample size was 2,521 adults in the United States. Please refer to the Github repository for more details on this project. 
+					Note: YouGov Plc conducted the poll between June 5-7, 2023, under commissioned by Bankrate. The sample size was 2,521 adults in the United States. Please refer to the <a href="https://github.com/anaeazpurua/financial-security-poll">Github repository</a> for more details on this project. 
 					</p>                 
                 
 
