--- a/index.html
+++ b/index.html
@@ -7,10 +7,16 @@
         <title>Half of Americans say they need more than $100,000 annually to feel financially secure</title>
         <link rel="stylesheet" href="style.css">
 		<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700;900&display=swap" rel="stylesheet">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700;900&display=swap" rel="stylesheet">
+		<meta property="og:title" content="Half of Americans say they need more than $100,000 annually to feel financially secure">
+		<meta property="og:description" content="The more Americans earn, the more they need to feel financially secure, according to one poll.">
+		<meta property="og:type" content="article">
+		<meta property="og:image" content="http://example.com/project-two/thumbnail.jpg">
+		<meta name="twitter:card" content="summary_large_image">
+		<meta name="twitter:@anaeazpurua" content="@your_twitter_username">
     </head>
     <body>
         <div class="section">
