--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<meta property="og:title" content="Half of Americans say they need more than $100,000 annually to feel financially secure">
 		<meta property="og:description" content="The more Americans earn, the more they need to feel financially secure, according to one poll.">
 		<meta property="og:type" content="article">
-		<meta property="og:image" content="http://example.com/project-two/thumbnail.jpg">
+		<meta property="og:image" content="https://github.com/anaeazpurua/financial-security-poll/blob/main/promo-twitter.png">
 		<meta name="twitter:card" content="summary_large_image">
 		<meta name="twitter:@anaeazpurua" content="@your_twitter_username">
     </head>
