--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@ span.textshadowAzul{
                 <h2>What would Americans do with more money?</h2>
 
 
-                <p class="article__text">About 72% of respondents say they would increase their spending if they get a raise. Taking a vacation and/or traveling is the most popular option for shelling out the potential extra money, according to the poll. Respondents could choose more than one category.</p>    
+                <p class="graphic__subhed">About 72% of respondents say they would increase their spending if they get a raise. Taking a vacation and/or traveling is the most popular option for shelling out the potential extra money, according to the poll. Respondents could choose more than one category.</p>    
 				
 				<div class="flourish-embed flourish-bubble-chart" data-src="visualisation/14526889"><script src="https://public.flourish.studio/resources/embed.js"></script></div>
                 
